Update container file

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,9 @@
 # Uses Microsoft's Python devcontainer base (has user "vscode" and Python preinstalled)
 FROM mcr.microsoft.com/devcontainers/python:3.11
 
+COPY requirements.txt /tmp/requirements.txt
+RUN pip install --no-cache-dir -r /tmp/requirements.txt
+
 # Optional: set up a venv and install tools
 # RUN python -m venv /workspace/.venv && \
 #     /workspace/.venv/bin/pip install --upgrade pip black
