--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,7 @@
       ]
     }
   },
+  "postCreateCommand": "pip install -r requirements.txt",
   "remoteUser": "vscode",
   "forwardPorts": []
 }
